@@ -30,6 +30,7 @@ ZeroLeptonCRWT::ZeroLeptonCRWT(const char *name)
     m_tree(0), 
     m_stringRegion("CRWT_SRAll"), 
     m_doSmallNtuple(true),
+    m_fillTRJigsawVars(false),
     m_IsData(false),
     m_IsTruth(false),
     m_IsSignal(false),
@@ -50,6 +51,7 @@ ZeroLeptonCRWT::ZeroLeptonCRWT(const char *name)
     m_derivationTag(INVALID_Derivation)
 {
   cafe::Config config(name);
+  m_fillTRJigsawVars = config.get("fillTRJigsawVars",false);
   m_IsData = config.get("IsData",false);
   m_IsSignal = config.get("IsSignal",false);
   m_IsTruth = config.get("IsTruth",false);
@@ -102,7 +104,7 @@ TTree* ZeroLeptonCRWT::bookTree(const std::string& treename)
   bookNTReclusteringVars(tree,m_RTntv);
   bookNTCRWTVars(tree,m_crwtntv);
   bookNTExtraVars(tree,m_extrantv);
-  bookNTRJigsawVars(tree,m_rjigsawntv);
+  if ( m_fillTRJigsawVars) bookNTRJigsawVars(tree,m_rjigsawntv);
   return tree;
 }
 
@@ -516,14 +518,14 @@ bool ZeroLeptonCRWT::processEvent(xAOD::TEvent& event)
   //if (nonISR_jets.size()>=2) mT2_noISR = m_proxyUtils.MT2(nonISR_jets,missingETPrime); 
   //out() << " mT2 " << mT2 << " " << mT2_noISR << std::endl; 
 
-  m_proxyUtils.RJigsawInit();
-  
   std::map<TString,float> RJigsawVariables;
-
-  m_proxyUtils.CalculateRJigsawVariables(good_jets, 
-                                missingETPrime.X(),
-                                missingETPrime.Y(),
-                                RJigsawVariables);
+  if (  m_fillTRJigsawVars ) {
+    m_proxyUtils.RJigsawInit();
+    m_proxyUtils.CalculateRJigsawVariables(good_jets, 
+					   missingETPrime.X(),
+					   missingETPrime.Y(),
+					   RJigsawVariables);
+  }
 
 
   //Super Razor variables
@@ -637,7 +639,7 @@ bool ZeroLeptonCRWT::processEvent(xAOD::TEvent& event)
 
     m_proxyUtils.FillNTExtraVars(m_extrantv, MET_Track, MET_Track_phi, mT2,mT2_noISR,gaminvRp1 ,shatR ,mdeltaR ,cosptR ,gamma_R,dphi_BETA_R , dphi_leg1_leg2 , costhetaR ,dphi_BETA_Rp1_BETA_R,gamma_Rp1,costhetaRp1,Ap);
 
-    m_proxyUtils.FillNTRJigsawVars(m_rjigsawntv, RJigsawVariables );
+    if (  m_fillTRJigsawVars ) m_proxyUtils.FillNTRJigsawVars(m_rjigsawntv, RJigsawVariables );
 
     m_tree->Fill();
   }
