@@ -26,6 +26,7 @@ ZeroLeptonCRY::ZeroLeptonCRY(const char *name)
     m_tree(0), 
     m_stringRegion("CRY_SRAll"), 
     m_doSmallNtuple(true),
+    m_fillTRJigsawVars(false),
     m_IsData(false),
     m_IsTruth(false),
     m_IsSignal(false),
@@ -43,6 +44,7 @@ ZeroLeptonCRY::ZeroLeptonCRY(const char *name)
     m_derivationTag(INVALID_Derivation)
 {
   cafe::Config config(name);
+  m_fillTRJigsawVars = config.get("fillTRJigsawVars",false);
   m_IsData = config.get("IsData",false);
   m_IsSignal = config.get("IsSignal",false);
   m_IsTruth = config.get("IsTruth",false);
@@ -82,7 +84,7 @@ TTree* ZeroLeptonCRY::bookTree(const std::string& treename)
   bookNTVars(tree,m_ntv,false);
   bookNTReclusteringVars(tree,m_RTntv);
   bookNTExtraVars(tree,m_extrantv);
-  bookNTRJigsawVars(tree,m_rjigsawntv);
+  if ( m_fillTRJigsawVars) bookNTRJigsawVars(tree,m_rjigsawntv);
   bookNTCRYVars(tree,m_cryntv);
   return tree;
 }
@@ -449,14 +451,14 @@ bool ZeroLeptonCRY::processEvent(xAOD::TEvent& event)
   //if (nonISR_jets.size()>=2) mT2_noISR = m_proxyUtils.MT2(nonISR_jets,missingETCorr); 
   //out() << " mT2 " << mT2 << " " << mT2_noISR << std::endl; 
 
-  m_proxyUtils.RJigsawInit();
-  
   std::map<TString,float> RJigsawVariables;
-
-  m_proxyUtils.CalculateRJigsawVariables(good_jets, 
-                                missingETCorr.X(),
-                                missingETCorr.Y(),
-                                RJigsawVariables);
+  if ( m_fillTRJigsawVars) {
+    m_proxyUtils.RJigsawInit();
+    m_proxyUtils.CalculateRJigsawVariables(good_jets, 
+					   missingETCorr.X(),
+					   missingETCorr.Y(),
+					   RJigsawVariables);
+  }
 
 
   //Super Razor variables
@@ -564,7 +566,7 @@ bool ZeroLeptonCRY::processEvent(xAOD::TEvent& event)
 
     m_proxyUtils.FillNTExtraVars(m_extrantv, MET_Track, MET_Track_phi, mT2, mT2_noISR, gaminvRp1, shatR, mdeltaR, cosptR, gamma_R,dphi_BETA_R, dphi_leg1_leg2, costhetaR, dphi_BETA_Rp1_BETA_R, gamma_Rp1, costhetaRp1, Ap);
 
-    m_proxyUtils.FillNTRJigsawVars(m_rjigsawntv, RJigsawVariables );
+    if ( m_fillTRJigsawVars) m_proxyUtils.FillNTRJigsawVars(m_rjigsawntv, RJigsawVariables );
 
     FillNTCRYVars(m_cryntv,allphotons,*missingET,vtight,vloose,vtopoetcone20,vptvarcone20,
 		  //visEMTight,
